# PipelineLIDARSLAM

./: README.md
ira_slam_node/: CMakeLists.txt  README.md  package.xml
ira_slam_node/config/: params.yaml
ira_slam_node/include/scancontext/Scancontext/: Scancontext.cpp  Scancontext.h
ira_slam_node/src/: iraSlamNode.cpp
pythonScripts/evaluateLoopClosure/: README.md  evaluate_loop_closures.py
pythonScripts/kitti2tum/: README.md
pythonScripts/kitti_velodyne_ros2_publisher/: README.md  kitti_publisher.py
pythonScripts/pointCloudRegistration/: pcRegistration.py
pythonScripts/trajectory_frame_converter/: README.md  transform_odometry.py
