<?xml version="1.0"?>
<package format="3">
  <name>ira_slam_node</name>
  <version>0.0.0</version>
  <description>Un nodo che sottoscrive dati PointCloud2 e Odometry.</description>
  <maintainer email="ottoiralab@gmail.com">otto</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dipendenze principali -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Dipendenze di test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

